--- a/ourProject/css/style.css
+++ b/ourProject/css/style.css
@@ -181,6 +181,9 @@ section {
     z-index: 1000;
 
 }
+.header .header-2 .navbar a.active {
+    background: black;
+}
 
 .bottom-navbar {
     text-align: center;
@@ -1074,3 +1077,81 @@ section {
     color: var(--black);
     cursor: pointer;
 }
+
+
+.card-wrapper {
+    padding: 0 15px;
+  }
+  
+  .card {
+    max-width: 250px;
+    height: 450px;
+    background: #ffffff;
+    margin: 50px auto;
+    box-shadow: 0 3px 5px rgba(0,0,0,0.1);
+    position: relative;
+    overflow: hidden;
+
+    .image-wrapper {
+      height: 70%;
+      width: 100%;
+      overflow: hidden;
+      transition: height 100ms ease-out;
+      &.shrink {
+        height: 40%;
+      }
+    }
+
+    .content-wrapper {
+      padding: 15px;
+      .price {
+        margin: 10px 0;
+        font-weight: 300;
+      }
+      .description {
+        margin: 25px 0 0 0;
+        font-size: 1.1rem;
+        line-height: 1.5rem;
+        display: none;
+        opacity: 0;
+        transition: opacity 200ms ease-out;
+        &.show {
+          display: block;
+          opacity: 1;
+        }
+      }
+      .actions {
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        padding: 10px;
+        width: 100%;
+        background: #fff;
+        .button {
+          width: 48%;
+          margin: 0 1% 0 1%;
+          float: left;
+        }
+      }
+    }
+  }
+  
+
+  
+  .image {
+    max-width: 100%;
+    height: auto;
+  }
+  
+  // Media Queries
+  
+  @media (max-width: 768px) {
+    .card .image-wrapper {
+    height: 55%;  
+    }
+   .card .content-wrapper .actions .button {
+      width: 100%;
+      float: none;
+      margin: 0 0 2% 0;
+    }
+  }
